@@ -5,11 +5,12 @@
 - add import/export of PasswordSafe files
 - add import/export of GPasMan files
 - add import/export of zsafe files
-- option for autolocking the file after a period of inactivity
 - sorting of the tree
 - update documentation
 - gnome panel applets (account lookup, password generator etc)
   - show complete account tree as a popup-submenu of the applet
+- bugfix: make autolock filter trigger on certain events only
+  (needs pygtk bug #156948 to be fixed first)
 
 0.5.x:
 - ensure complete UTF-8 support
