@@ -30,7 +30,6 @@ if "@pythondir@" not in sys.path:
 from revelation import authmanager, config, data, datahandler, dialog, entry, io, ui, util
 
 
-
 class Revelation(ui.App):
 	"The Revelation application"
 
@@ -76,19 +75,24 @@ class Revelation(ui.App):
 		self.entrystore		= data.EntryStore()
 		self.entrysearch	= data.EntrySearch(self.entrystore)
 		self.items		= ui.ItemFactory(self)
+		self.locktimer		= ui.Timer(1)
 		self.sessionclient	= gnome.ui.master_client()
 		self.undoqueue		= data.UndoQueue()
 
 		self.datafile.connect("changed", lambda w,f: self.__state_file(f))
 		self.datafile.connect("content-changed", self.__cb_file_content_changed)
 		self.entryclipboard.connect("content-toggled", lambda w,d: self.__state_clipboard(d))
+		self.locktimer.connect("ring", self.__cb_file_autolock)
 		self.sessionclient.connect("die", lambda w: self.quit())
 		self.sessionclient.connect("save-yourself", self.__cb_session_save)
 		self.undoqueue.connect("changed", lambda w: self.__state_undo(self.undoqueue.get_undo_action(), self.undoqueue.get_redo_action()))
 
-		self.config.monitor("search/folders",	lambda k,v,d: setattr(self.entrysearch, "folders", v))
-		self.config.monitor("search/namedesc",	lambda k,v,d: setattr(self.entrysearch, "namedesconly", v))
-		self.config.monitor("search/casesens",	lambda k,v,d: setattr(self.entrysearch, "casesensitive", v))
+		self.config.monitor("search/folders",		lambda k,v,d: setattr(self.entrysearch, "folders", v))
+		self.config.monitor("search/namedesc",		lambda k,v,d: setattr(self.entrysearch, "namedesconly", v))
+		self.config.monitor("search/casesens",		lambda k,v,d: setattr(self.entrysearch, "casesensitive", v))
+		self.config.monitor("file/autolock_timeout",	lambda k,v,d: self.locktimer.start(v * 60))
+
+		dialog.EVENT_FILTER = self.__cb_event_filter
 
 
 	def __init_states(self):
@@ -123,6 +127,9 @@ class Revelation(ui.App):
 
 		self.entryview.display_info()
 		self.show_all()
+
+		self.window.add_filter(self.__cb_event_filter)
+
 
 		# set some variables
 		self.entrysearch.string	= ""
@@ -392,6 +399,13 @@ class Revelation(ui.App):
 			self.file_open(files[0])
 
 
+	def __cb_event_filter(self, event):
+		"Event filter for gdk window"
+
+		self.locktimer.reset()
+		return gtk.gdk.FILTER_CONTINUE
+
+
 	def __cb_exception(self, type, value, trace):
 		"Callback for unhandled exceptions"
 
@@ -412,13 +426,21 @@ class Revelation(ui.App):
 		"Callback for changed file"
 
 		try:
-			print "changed!"
-
 			if dialog.FileChanged(self, file).run() == True:
 				self.file_open(self.datafile.get_file(), self.datafile.get_password())
 
 		except dialog.CancelError:
 			self.statusbar.set_status("Open cancelled")
+
+
+	def __cb_file_autolock(self, widget, data = None):
+		"Callback for locking the file"
+
+		if self.config.get("file/autolock") == True:
+			self.locktimer.stop()
+			print "lock"
+			self.file_lock()
+			self.locktimer.start(self.config.get("file/autolock_timeout") * 60)
 
 
 	def __cb_session_save(self, widget, phase, what, end, interaction, fast, data = None):
