@@ -2,6 +2,10 @@ Revelation changelog
 
 ---------------[ xxxx-xx-xx : 0.4.1 ]---------------
 
+2005-02-03  Erik Grinaker <erikg@codepoet.no>
+
+	* added option for autolocking file when inactive
+
 2005-02-02  Erik Grinaker <erikg@codepoet.no>
 
 	* ask user to reload file if it is changed outside revelation
